--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,3 +12,33 @@ body {
 .moto-gallery-desc {
   font-size : 1rem;
 }
+
+.font-5 {
+  font-size: 1.6vw !important;
+}
+h1 {
+  font-size: 2.2vw !important;
+  font-weight: bold;
+
+}
+
+
+@media (max-width: 544px) {
+    .app1{font-size: 0.7rem !important;}
+}
+
+@media (max-width: 767px) and (min-width: 545px) {
+    .app1{font-size: 0.8rem !important;}
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+    .app1{font-size: 1rem !important;}
+}
+
+@media (max-width: 1200px) and (min-width: 993px) {
+    .app1{font-size: 1.1rem !important;}
+}
+
+@media (min-width: 1201px) {
+    .app1{font-size: 1.3rem !important;}
+}
