--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@ h1 {
   font-weight: bold;
 }
 
-.app1 {
+.warkot_page_font, .t-justify {
   text-align: justify;
   text-justify: inter-word;
 }
@@ -40,19 +40,50 @@ h1 {
 }
 
 @media (max-width: 992px) and (min-width: 768px) {
-  .app1 {
-    font-size: 1rem !important;
+  .page_warkot_font {
+    font-size: 1.6vw !important;
+  }
+
+  .page_offer_font {
+    /* font-size: 1.9rem !important; */
+    font-size: 1.6vw !important;
+  }
+
+  .page_aboutUs_font {
+    /* font-size: 1.9rem !important; */
+    font-size: 1.3vw !important;
   }
 }
 
 @media (max-width: 1200px) and (min-width: 993px) {
-  .app1 {
-    font-size: 1.1rem !important;
+  .page_warkot_font {
+    /* font-size: 1.9rem !important; */
+    font-size: 1.6vw !important;
+  }
+
+  .page_offer_font {
+    font-size: 1.7vw !important;
+  }
+
+
+  .page_aboutUs_font {
+    /* font-size: 1.9rem !important; */
+    font-size: 1.3vw !important;
   }
 }
 
 @media (min-width: 1201px) {
-  .app1 {
-    font-size: 1.3rem !important;
+  .page_warkot_font {
+    font-size: 1.6vw !important;
+  }
+
+  .page_offer_font {
+    /* font-size: 1.9rem !important; */
+    font-size: 1.7vw !important;
+  }
+
+  .page_aboutUs_font {
+    /* font-size: 1.9rem !important; */
+    font-size: 1.3vw !important;
   }
 }
