--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,8 @@ nav a:hover, .link-grey {
 .moto-gallery-desc {
   font-size: 1rem;
 }
+
+
 /*
 h1 {
   font-size: 2.2vw !important;
@@ -59,6 +61,12 @@ h2 {
 
   .page_aboutUs_font {
     font-size: 2.1vw !important;
+  }
+
+  .center-logo {
+    display: block;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
 }
 
