--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,6 @@
 body {
   font-size: 1.3rem !important;
   font-family: 'Barlow Condensed', 'Arial', sans-serif;
-  /* font-weight: bold; */
 }
 
 nav a:hover, .link-grey {
@@ -18,23 +17,11 @@ nav a:hover, .link-grey {
 }
 
 
-/*
-h1 {
-  font-size: 2.2vw !important;
-  font-weight: bold;
-} */
-
-
 h1 {
   font-size: 1.5rem !important;
   font-weight: bold;
 }
 
-/* nnew */
-/* h2 {
-  font-size: 1.6vw !important;
-  font-weight: bold;
-} */
 
 h2 {
   font-size: 1.4rem !important;
@@ -60,20 +47,16 @@ p, .justify-t{
 }
 @media (max-width: 544px) {
   .page_warkot_font {
-    /* font-size: 2.1vw !important; */
     padding-left: 0.75rem !important;
     padding-right: 0.75rem !important;
   }
 
   .page_offer_font {
-    /* font-size: 2.1vw !important; */
-    /* font-size: 1.8vw !important; */
     padding-left: 0.75rem !important;
     padding-right: 0.75rem !important;
   }
 
   .page_aboutUs_font {
-    /* font-size: 2.1vw !important; */
     padding-left: 0.75rem !important;
     padding-right: 0.75rem !important;
   }
@@ -87,20 +70,16 @@ p, .justify-t{
 
 @media (max-width: 767px) and (min-width: 545px) {
   .page_warkot_font {
-    /* font-size: 1.9vw !important; */
     padding-left: 0.75rem !important;
     padding-right: 0.75rem !important;
   }
 
   .page_offer_font {
-    /* font-size: 1.8vw !important; */
-    /* font-size: 1.8vw !important; */
     padding-left: 0.75rem !important;
     padding-right: 0.75rem !important;
   }
 
   .page_aboutUs_font {
-    /* font-size: 1.8vw !important; */
     padding-left: 0.75rem !important;
     padding-right: 0.75rem !important;
   }
@@ -166,24 +145,6 @@ p, .justify-t{
   }
 }
 
-.flex-shrink {
-  flex-shrink: 0;
+#offer_img_2 {
+  width:100%
 }
-
-.flex-direction {
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.flex-row:before, .flex-row:after{
-   display: none !important;
-}
-
-@media not all and (min-resolution:.001dpcm) and (max-width: 767px) { @media (max-width: 767px)  {
-
-    .safari_only {
-
-        height:65%;
-
-    }
-}}
